// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`button renders correctly 1`] = `
<button
  className="button"
>
  <div
    className="buttonContent"
  />
</button>
`;

exports[`button renders correctly with icon 1`] = `
<button
  className="button"
>
  <div
    className="buttonContent"
  >
    <img
      className="iconLeft"
      src="icon.png"
    />
    Button with icon
  </div>
</button>
`;

exports[`button renders correctly with right icon 1`] = `
<button
  className="button"
>
  <div
    className="buttonContent"
  >
    Button with icon right
    <img
      className="iconRight"
      src="icon2.png"
    />
  </div>
</button>
`;

exports[`button renders correctly with text 1`] = `
<button
  className="button"
>
  <div
    className="buttonContent"
  >
    Button with text
  </div>
</button>
`;
